# SQLiteCpp

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md  appveyor.yml
sqlite3/: CMakeLists.txt
tests/: Column_test.cpp  Database_test.cpp
